state-channel/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yetroid-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: yetroid-ip
    networking.gke.io/managed-certificates: yetroid-ssl-cert
    kubernetes.io/ingress.class: "gce"
    # WebSocket-specific annotations
    cloud.google.com/timeout-sec: "3600" # 1 hour timeout
    cloud.google.com/connection-draining-timeout-sec: "300"
    cloud.google.com/backend-config: '{"default": "yetroid-backend-config"}'
spec:
  rules:
    - host: yetroid.hooper.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yetroid-service
                port:
                  number: 80
